# piper

./: meson.build  meson_options.txt  org.freedesktop.Piper.json  piper.in
data/: meson.build  org.freedesktop.Piper.appdata.xml.in
